react router dom

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,10 @@
 body{
   color: #222;
 }
+
+img{
+  max-width: 100%;
+}
 main{
   padding: 10px;
   max-width: 1000px;
@@ -27,4 +31,14 @@ header a.logo{
 header nav{
   display: flex;
   gap: 55px;
+}
+div.post{
+  display: grid;
+  grid-template-columns: 0.9fr 1.1fr;
+  gap: 20px;
+
+}
+
+div.post div image{
+  width: 50%;
 }
